--- a/index.html
+++ b/index.html
@@ -39,42 +39,25 @@
    
 </div>
 
+<h1 class="text-center font-bold"> Order your car now!</h1>
+
+    <form netlify class= "p-8">
+        <label class="block mt-4 font-bold" for="name">Your Name</label>
+        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+        focus:border-purple-500" type="text" id="name" name="name">
+      
+        <label class="block mt-4 font-bold" for="email">Your Email</label>
+        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+        focus:border-purple-500" type="text" id="email" name="email">
+
+        <label class="block mt-4 font-bold" for="order">Would you like to order the Bronco or Mach-E?</label>
+        <input class=" p-2 w-64 p-2 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
+        focus:border-purple-500" type="text" id="order" name="order">
+      
+        <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
+      </form>
 
 </body>
 </html>
 
 
-
-<!-- <body>
-    <h1 class="text-center m-8 capitalize font-bold text-2xl text-purple-500">Welcome to the best product ever</h1>
-  
-    <div class="px-16 md:flex items-center bg-gray-100">
-      <div class="md:w-1/2 m-auto md:p-16">
-        <img class="rounded-xl" src="https://images.unsplash.com/photo-1565443492615-7e3d2324d925?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80">
-      </div>
-      <div class="md:w-1/2 p-8 space-y-4">
-        <h2 class="font-bold text-xl">It's Revolutionary.</h2>
-        <p>It's more revolutionary than <a href="http://google.com/">Google.</a></p>
-        <h2 class="font-bold text-xl">It's Life-Changing.</h2>
-        <p>You'll wonder how you lived without it.</p>
-        <h2 class="font-bold text-xl">It's Free.</h2>
-        <p>In fact, we'll pay you.</p>
-      </div>
-    </div>
-  ​
-    <div class="m-8">
-      <h1 class="text-3xl font-bold text-center">Sign up to learn more</h1>
-  ​
-      <form netlify class="mx-auto mt-8 w-64">
-        <label class="block mt-4 font-bold" for="name">What is your name?</label>
-        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="name" name="name">
-  
-        <label class="block mt-4 font-bold" for="favorite-color">What is your favorite color?</label>
-        <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="favorite-color" name="favoriteColor">
-  
-        <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
-      </form>
-    </div>
-  </body>
-  ​
-  </html> -->
