--- a/mach-e.html
+++ b/mach-e.html
@@ -8,7 +8,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1 class="font-bold text-4xl text-center">The all new 2021 Mach-E</h1>
+    <h1 class="font-bold text-4xl text-center text-blue-900">The all new 2021 Mach-E</h1>
 
     <p>
         <h2 class="italic mx-2"> Features include</h2> 
